# distilabel-steps-library

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/distilabel_steps_library/: __init__.py  drop_empty.py
src/distilabel_steps_library/chat/: chat_transcript.py  flip_role.py  insert_message.py  rewrite_messages.py  save_to_jsonl.py
tests/: smoke_test.py
