[project]
name = "distilabel-steps-library"
version = "0.1.0"
description = "A bunch of steps for distilabel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["distilabel>=1.4.1"]
license = { text = "WTFPL" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
